Improvians/css/custom.css
/* ... */
@media print {
    .site__container > div { justify-content: center; }
    .site__container .dropdown, .header__bottom, .floating__footer, .print__cta { display: none; }
    .w-auto { width: 100% !important; }
    .data__table { display: inline-block; overflow: hidden; width: auto!important; max-width: 100%!important; }
    table{
        max-width: 100% !important;
        width:100%;
        table-layout: fixed;
        border: 1px solid #d7d7d7;
    }
    table td{
        width: auto;
        overflow: hidden;
        word-wrap: break-word;
        border: 1px solid #d7d7d7;
    }
    body, .main { background: #f4f6fa; padding-bottom: 0; }
    body .main, .header__bottom + .main { margin-top: 0; padding-top: 30px; }
    .page__break { page-break-before: always; }
}


@media print {
    @page {
        size: letter;
        size: 11in 8.5in;
        margin: 0;
    }

    body {
        margin: 0;
        font-size: 12px;
        line-height: 18px;
        background: #ffffff;
    }

    .page__us {
        font-size: 10px;
        line-height: 16px;
        min-height: 100vh;
        background: #ffffff;
    }

    .page__us .printBtns { display: none; }

    .page__us .custom__dropdown, .page__us .filter__control, .page__us .input__control {
        height: 40px;
        line-height: 40px;
        border-radius: 8px;
        padding-left: 15px;
    }

    .page__us .data__table tr { page-break-after:always; }
    
    .page__us .data__table td, .page__us .data__table th {
        padding: 0 5px;
        font-size: 8px;
        line-height: 12px;
    }

    .page__us .data__table th  {
        padding: 3px 5px;
    }

    .page__us--header {
        position: fixed;
        width: 100%;
        top: 24px;
    }

    .page__us--footer {
        position: fixed;
        width: 100%;
        bottom: 24px;
    }
    
    .page__us .page-break {
        margin-top: 80px;
        margin-bottom: 84px;
        page-break-after: always;
    }

    .page__us .page-break + .page-break {
        margin-top: 106px;
    }
    
    .page__us tr.page-break { page-break-after:always; }
    .page__us table { page-break-after:always; }

    .data__table tr > th:first-child, .data__table tr > td:first-child { position: static; left: auto; }

    .main {
        margin: 0 !important;
        padding: 0 !important;
    }
    .header__bottom, .site__breadcrumb, header, .floating__footer {
        display: none;
    }
    .has__footer { padding: 0; }
}

